@@ -1,10 +1,0 @@
-#define PQXX_BROKEN_ITERATOR 1
-#define PQXX_BROKEN_USING_DECL 1
-/* #undef PQXX_HAVE_CHAR_TRAITS */
-/* #undef PQXX_HAVE_CPP_PRAGMA_MESSAGE */
-/* #undef PQXX_HAVE_CPP_WARNING */
-/* #undef PQXX_HAVE_IOS */
-/* #undef PQXX_HAVE_LIMITS */
-#define PQXX_HAVE_LONG_DOUBLE 1
-/* #undef PQXX_HAVE_REVERSE_ITERATOR */
-/* #undef PQXX_HAVE_STREAMBUF */
